[gd_scene load_steps=9 format=3 uid="uid://bjosupa1ecdui"]

[ext_resource type="Script" path="res://scripts/player_UI.gd" id="1_kln6f"]
[ext_resource type="PackedScene" uid="uid://0fms14cj573w" path="res://scenes/inventory.tscn" id="2_h6lol"]
[ext_resource type="Texture2D" uid="uid://c3vpw331ktrph" path="res://assets/Player_UI_set/RPG Style (1).png" id="2_rmg67"]
[ext_resource type="PackedScene" uid="uid://pmqpjgdq3nbe" path="res://scenes/talent_tree.tscn" id="3_talent"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jqow2"]
atlas = ExtResource("2_rmg67")
region = Rect2(16, 29, 73, 7)
margin = Rect2(0, 1, 0, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb2vc"]
atlas = ExtResource("2_rmg67")
region = Rect2(2, 42, 89, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1hw8"]
atlas = ExtResource("2_rmg67")
region = Rect2(16, 2, 73, 7)
margin = Rect2(0, -0.5, 1, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_level"]
bg_color = Color(0.4, 0.2, 0.6, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.84, 0, 1)
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="player_ui" type="CanvasLayer"]
script = ExtResource("1_kln6f")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 25.0
offset_top = 1.0
offset_right = 264.0
offset_bottom = 33.0
scale = Vector2(1.5, 1.5)
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_right = 15
texture_under = SubResource("AtlasTexture_jqow2")
texture_over = SubResource("AtlasTexture_qb2vc")
texture_progress = SubResource("AtlasTexture_b1hw8")
texture_progress_offset = Vector2(4, 3)

[node name="ExperienceBar" type="TextureProgressBar" parent="."]
offset_left = 27.0
offset_top = 67.0
offset_right = 261.0
offset_bottom = 102.0
scale = Vector2(1.5, 1.5)
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_right = 15
texture_under = SubResource("AtlasTexture_jqow2")
texture_over = SubResource("AtlasTexture_qb2vc")
texture_progress = SubResource("AtlasTexture_b1hw8")
texture_progress_offset = Vector2(4, 3)
tint_progress = Color(0.398641, 0.397882, 0.917576, 1)

[node name="LevelContainer" type="PanelContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 90.0
offset_bottom = 90.0
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_level")

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="."]
offset_left = 270.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "Атака: 10"

[node name="HealthLabel" type="Label" parent="."]
offset_left = 28.0
offset_top = 216.0
offset_right = 270.0
offset_bottom = 252.0
theme_override_font_sizes/font_size = 24

[node name="ExperienceLabel" type="Label" parent="."]
offset_left = 958.0
offset_top = 26.0
offset_right = 1244.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24

[node name="Inventory" parent="." instance=ExtResource("2_h6lol")]
anchors_preset = 13
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = -211.0
offset_top = 183.0
offset_right = 201.0
offset_bottom = -250.0

[node name="QuestUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0

[node name="QuestList" type="ItemList" parent="QuestUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2

[node name="QuestDetails" type="RichTextLabel" parent="QuestUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 5

[node name="TalentTree" parent="." instance=ExtResource("3_talent")]

[node name="LocationsContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -120.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="SmallVillageLabel" type="Label" parent="LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Маленькая деревня: (?, ?)"
horizontal_alignment = 2

[node name="MiddleVillageLabel" type="Label" parent="LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Средняя деревня: (?, ?)"
horizontal_alignment = 2

[node name="DungeonLabel" type="Label" parent="LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Подземелье: (?, ?)"
horizontal_alignment = 2

[node name="CoordinatesLabel" type="Label" parent="LocationsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Текущая позиция: (0, 0)"
horizontal_alignment = 2
